iptables_openvpn
# Generated by iptables-save v1.4.4 on Sun Jan 22 10:19:55 2012
*nat
:PREROUTING ACCEPT [457:54499]
:INPUT ACCEPT [156:12663]
:OUTPUT ACCEPT [17759:1068611]
:POSTROUTING ACCEPT [17856:1074983]
-A POSTROUTING -s 10.123.123.0/24 -o eth0 -j MASQUERADE 
-A POSTROUTING -s 10.123.123.0/24 -o eth1 -j MASQUERADE 
COMMIT
# Completed on Sun Jan 22 10:19:55 2012
# Generated by iptables-save v1.4.4 on Sun Jan 22 10:19:55 2012
*filter
:INPUT ACCEPT [8645048:4249590171]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6253703:11637796589]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh 
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 --dport 1024:65535 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 4 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 12 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p udp -m udp --dport 33434:33523 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 10.123.123.0/24 -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A fail2ban-ssh -j RETURN 
COMMIT
# Completed on Sun Jan 22 10:19:55 2012
